added role to rating card aria label role: BUTTON

--- a/reviews.html
+++ b/reviews.html
@@ -40,7 +40,7 @@
             </div>
         </div>
         <!-- Movie review section for Godzilla Minus One -->
-        <section class="container">
+        <div class="container">
             <article class="nested-container">
                 <figure class="reviewposter">
                     <img src="images/qak95hegodbb1.jpg" alt="Godzilla Minus One movie poster">
@@ -48,7 +48,7 @@
 
                 <h3 class="film_title" id="MinusOne">Godzilla Minus One</h3>
                 <!-- div to create rating card -->
-                <div class="card" aria-label="flippable rating card for godzilla minus one">
+                <div class="card" aria-label="flippable rating card for godzilla minus one" role="button">
                     <div class="card-inner">
                         <div class="card-front">
                             <h4 class="rating_title">Rating</h4>
@@ -87,7 +87,7 @@
 
                 <h3 class="film_title" id="OneBattle">One Battle After Another</h3>
                 <!-- div to create rating card -->
-                <div class="card" aria-label="flippable rating card for one battle after another">
+                <div class="card" aria-label="flippable rating card for one battle after another" role="button">
                     <div class="card-inner">
                         <div class="card-front">
                             <h4 class="rating_title">Rating</h4>
@@ -125,7 +125,7 @@
                 </figure>
                 <h3 class="film_title" id="FantasticFour">The Fantastic Four: First Steps</h3>
                 <!-- div to create rating card -->
-                <div class="card" aria-label="flippable rating card for fantastic four">
+                <div class="card" aria-label="flippable rating card for fantastic four" role="button">
                     <div class="card-inner">
                         <div class="card-front">
                             <h4 class="rating_title">Rating</h4>
@@ -165,7 +165,7 @@
                 <h3 class="film_title" id="Tron">Tron: Ares</h3>
                 
                 <!-- div to create rating card -->
-                <div class="card" aria-label="flippable rating card for tron:ares">
+                <div class="card" aria-label="flippable rating card for tron:ares" role="button">
                     <div class="card-inner">
                         <div class="card-front">
                             <h4 class="rating_title">Rating</h4>
@@ -204,7 +204,7 @@
                 </figure>
                 <h3 class="film_title" id="NowYouSee">Now You See Me: Now You Don't</h3>
                 <!-- div to create rating card --> 
-                <div class="card" aria-label="flippable rating card for now you see me">
+                <div class="card" aria-label="flippable rating card for now you see me" role="button">
                     <div class="card-inner">
                         <div class="card-front">
                             <h4 class="rating_title">Rating</h4>
@@ -236,7 +236,7 @@
                 </blockquote>
             </article>
 
-        </section>
+        </div>
 
 
     </main>
